--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,8 +1,9 @@
 book_filename: "series"
 language:
   ui:
-    chapter_name: "Chapter "
+    chapter_name: ""
 rmd_files: [
+  "index.Rmd",
   "TP_analyse_mondiale.Rmd"]
 delete_merged_file: true 
 output_dir: "docs"
